--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -23,18 +23,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.google.android.gms:play-services-wearable:11.0.4'
-    compile 'com.android.support:support-compat:26.0.1'
+    implementation 'com.google.android.gms:play-services-wearable:11.0.4'
+    implementation 'com.android.support:support-compat:26.0.1'
     wearApp project(':wear')
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:support-v13:26.0.1'
-    compile 'com.android.support:design:26.0.1'
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:support-v13:26.0.1'
+    implementation 'com.android.support:design:26.0.1'
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
