--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.support:wearable:2.0.4'
-    compile 'com.google.android.gms:play-services-wearable:11.0.4'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.android.support:wearable:2.0.4'
+    implementation 'com.google.android.gms:play-services-wearable:11.0.4'
     provided 'com.google.android.wearable:wearable:2.0.4'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
