YandereAudio Merged with YandereService for now
Both apps are now merged in one, enjoy

Signed-off-by: Tristan Marsell <tristan.marsell@t-online.de>

--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '26.0.1'
     defaultConfig {
-        applicationId "teamdevelite.yandereaudio20.pdesire"
+        applicationId "projectmeli.yandereaudio.pdesire"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
