--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="teamdevelite.yandereaudio20.pdesire">
+          package="projectmeli.yandereaudio.pdesire">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
@@ -12,16 +12,34 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true">
         <activity
-            android:name=".MainActivity"
+            android:name="projectmeli.yandereaudio.pdesire.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:allowEmbedded="true">
+            android:allowEmbedded="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.meli.pdesire.yandereservice.SettingsActivity"
+            android:label="@string/service_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.meli.pdesire.yandereservice.PDesireAudioActivity"
+            android:label="@string/title_activity_pdesire_audio">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
     </application>
