--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="teamdevelite.yandereaudio20.pdesire">
+          package="projectmeli.yandereaudio.pdesire">
 
     <uses-feature android:name="android.hardware.type.watch"/>
 
@@ -17,7 +17,7 @@
             android:required="true"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name="projectmeli.yandereaudio.pdesire.MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.DeviceDefault.Light">
             <intent-filter>
