--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.android.support:design:26.0.1'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.android.support:support-annotations:26.0.0'
 }
 repositories {
     mavenCentral()
