Prepare for Theme Changer and Android Wear support
This is the first approach to add Theme Changer and Android Wear support.

These feautures are not functionally yet but should prepare for proper implementation

ADDED:

Change Layout and add Support functions

Signed-off-by: Tristan Marsell <tristan.marsell@t-online.de>

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="projectmeli.yandereaudio.pdesire">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-feature android:name="android.hardware.screen.portrait" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -38,6 +40,19 @@
                 <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.meli.pdesire.yandereservice.listeners.YandereWearableApplyListener" >
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+            </intent-filter>
+        </service>
+
+        <receiver android:name="com.meli.pdesire.yandereservice.receivers.YandereBootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
