--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:11.0.4'
     provided 'com.google.android.wearable:wearable:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'me.denley.wearpreferenceactivity:wearpreferenceactivity:0.5.0'
 }
 repositories {
     mavenCentral()
