--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:11.2.0'
     provided 'com.google.android.wearable:wearable:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:support-annotations:26.0.1'
 }
 repositories {
     mavenCentral()
