--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -21,6 +21,10 @@ android {
     }
     productFlavors {
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support:support-v13:26.0.1'
     implementation 'com.android.support:design:26.0.1'
+    implementation 'com.google.guava:guava:23.0-android'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
