--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="projectmeli.yandereaudio.pdesire">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="projectmeli.yandereaudio.pdesire">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -11,7 +12,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
+        android:hardwareAccelerated="true"
+        android:allowBackup="true"
+        android:fullBackupContent="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="projectmeli.yandereaudio.pdesire.MainActivity"
             android:label="@string/app_name"
@@ -75,6 +79,12 @@
                 <action android:name="com.google.android.gms.wearable.CHANNEL_EVENT" />
                 <data android:scheme="wear" android:host="*" android:pathPrefix="/start" />
             </intent-filter>
+        </service>
+
+        <service
+            android:name="com.meli.pdesire.yandereservice.services.YandereJobSchedulerService"
+            android:label="YandereJobSchedulerService"
+            android:permission="android.permission.BIND_JOB_SERVICE" >
         </service>
 
         <receiver android:name="com.meli.pdesire.yandereservice.receivers.YandereBootReceiver">
