--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.android.support:support-v13:26.0.1'
     implementation 'com.android.support:design:26.0.1'
     implementation 'com.google.guava:guava:23.0-android'
+    implementation 'com.google.firebase:firebase-core:11.2.0'
+    implementation 'com.google.firebase:firebase-messaging:11.2.0'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
