--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
     repositories {
         jcenter()
         google()
-        maven {
-            url "https://maven.google.com"
-        }
+        maven { url "https://maven.google.com" }
         maven { url 'https://maven.fabric.io/public' }
+
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'io.fabric.tools:gradle:1+'
@@ -29,6 +29,7 @@ allprojects {
             url "https://maven.google.com"
         }
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
     }
 }
 
