--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -53,11 +53,13 @@ dependencies {
     implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
     implementation "com.android.support:cardview-v7:$android_libs"
     implementation "com.android.support:recyclerview-v7:$android_libs"
-    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation project(':projectcluster')
 }
 repositories {
     mavenCentral()
