--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -6,13 +6,13 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.2'
     defaultConfig {
         applicationId "projectmeli.yandereaudio.pdesire"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 3
-        versionName "3.0"
+        versionCode 4
+        versionName "4.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -37,22 +37,22 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.google.firebase:firebase-config:11.6.2'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation 'com.google.firebase:firebase-config:11.8.0'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.google.android.gms:play-services-wearable:11.6.2'
-    implementation "com.android.support:support-compat:$android_libs"
+    implementation 'com.google.android.gms:play-services-wearable:11.8.0'
+    implementation "com.android.support:support-compat:27.0.2"
     wearApp project(':wear')
-    implementation "com.android.support:appcompat-v7:$android_libs"
-    implementation "com.android.support:support-v13:$android_libs"
-    implementation "com.android.support:design:$android_libs"
+    implementation "com.android.support:appcompat-v7:27.0.2"
+    implementation "com.android.support:support-v13:27.0.2"
+    implementation "com.android.support:design:27.0.2"
     implementation 'com.google.guava:guava:23.0-android'
-    implementation 'com.google.firebase:firebase-core:11.6.2'
-    implementation 'com.google.firebase:firebase-messaging:11.6.2'
-    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
-    implementation "com.android.support:cardview-v7:$android_libs"
-    implementation "com.android.support:recyclerview-v7:$android_libs"
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation "com.android.support:cardview-v7:27.0.2"
+    implementation "com.android.support:recyclerview-v7:27.0.2"
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
