Time for YandereAudio 7.0
Signed-off-by: Tristan Marsell
<tristan.marsell@t-online.de>

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-feature android:name="android.hardware.screen.portrait" />
 
     <application
@@ -107,7 +108,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="0" />
+            android:value="" />
 
     </application>
 </manifest>
