--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -6,13 +6,13 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "projectmeli.yandereaudio.pdesire"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 4
-        versionName "4.0"
+        versionCode 7
+        versionName "7.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -53,6 +53,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:27.0.2"
     implementation "com.android.support:recyclerview-v7:27.0.2"
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.github.javiersantos:AppUpdater:2.6.4'
     implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
